--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-streamlit==1.38.0
-hydralit==1.0.14
-streamlit_pdf_viewer==0.0.17
-pandas==2.0.2
-numpy==1.24.3
+streamlit
+hydralit
+pandas>=2.1.0
+numpy>=1.25.0
 streamlit_option_menu
